--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,15 +19,14 @@
   </nav>
 
   <section class="product-container">
-    <!-- TODO: [1단계] 상품 정보에 맞게 변경 -->
     <div th:each="product : ${products}">
-      <img class="w-280 h-280 cover-image" /> <!-- 상품 이미지 -->
+      <img class="w-280 h-280 cover-image" th:src="${product.getImageUrl()}"/> <!-- 상품 이미지 -->
       <div class="flex justify-between w-280 p-5">
         <div class="product-info">
-          <span class="product-info__name"></span> <!-- 상품 이름 -->
-          <span class="product-info__price"></span> <!-- 상품 가격 -->
+          <span class="product-info__name" th:text="${product.getName()}"></span> <!-- 상품 이름 -->
+          <span class="product-info__price" th:text="${product.getPrice()}"></span> <!-- 상품 가격 -->
         </div>
-        <button type="submit" class="product-btn" th:onclick="addCartItem([[${product.id}]])">
+        <button type="submit" class="product-btn" th:onclick="addCartItem([[${product.getId()}]])">
           <img src="assets/svgs/cart.svg" alt="장바구니"/>
         </button>
       </div>
