feat: 로그인 페이지 연동

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
       <a href="/" class="nav-button">상품</a>
       <a href="/shopping" class="nav-button">장바구니</a>
       <a href="/order-history" class="nav-button">주문목록</a>
-      <a href="/login" class="nav-button">로그인</a>
+      <a href="/user/login" class="nav-button">로그인</a>
     </div>
   </nav>
 
