--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" th:href="@{/css/index.css}">
-  <title>Shopping</title>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <title>Shopping</title>
 </head>
 <body>
 <div class="root">
-  <nav class="nav flex justify-end">
-    <div class="flex-center gap-15">
-      <a href="/" class="nav-button">상품</a>
-      <a href="/shopping" class="nav-button">장바구니</a>
-      <a href="/order-history" class="nav-button">주문목록</a>
-      <a href="/login" class="nav-button">로그인</a>
-    </div>
-  </nav>
+    <nav class="nav flex justify-end">
+        <div class="flex-center gap-15">
+            <a href="/" class="nav-button">상품</a>
+            <a href="/shopping" class="nav-button">장바구니</a>
+            <a href="/order-history" class="nav-button">주문목록</a>
+            <a href="/login" class="nav-button">로그인</a>
+        </div>
+    </nav>
 
-  <section class="cart-section">
-    <div class="cart-list">
-    </div>
-<!--    TODO: [4단계] 장바구니 아이템 전체 주문 시 아래 주석을 해제하여 연동 -->
-<!--    <div class="flex justify-between items-center mt-30">-->
-<!--      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>-->
-<!--    </div>-->
-  </section>
+    <section class="cart-section">
+        <div class="cart-list">
+        </div>
+        <!--    TODO: [4단계] 장바구니 아이템 전체 주문 시 아래 주석을 해제하여 연동 -->
+        <!--    <div class="flex justify-between items-center mt-30">-->
+        <!--      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>-->
+        <!--    </div>-->
+    </section>
 </div>
 <script th:src="@{/js/cart.js}"></script>
 <script th:src="@{/js/order.js}"></script>
@@ -38,8 +38,7 @@
             return;
         }
 
-        // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
-        fetch('', {
+        fetch('/carts', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
@@ -51,20 +50,20 @@
             let element = '<hr class="divide-line-gray mt-10" />';
             data.forEach(cartItem => {
                 element += `
-                    <div class="shopping-container">
+                    <div class="cart-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144 cover-image" /> <!-- 장바구니 아이템 상품의 이미지 -->
-                        <span class="shopping-name"></span> <!-- 장바구니 아이템 상품의 이름 -->
+                        <img class="w-144 h-144 cover-image" src="${cartItem.image}" />
+                        <span class="cart-name">${cartItem.name}</span>
                       </div>
                       <div class="flex-col-center justify-around gap-15">
-                        <button class="shopping-trash-svg" onclick="removeCartItem(${cartItem.id})">
+                        <button class="cart-trash-svg" onclick="removeCartItem(${cartItem.id})">
                             <img src="./assets/svgs/trash.svg" alt="삭제" />
                         </button>
                         <div class="number-input-container">
-                          <input type="number" class="number-input" value="" /> <!-- 장바구니 아이템 수량 -->
+                          <input type="number" class="number-input" value="${cartItem.quantity}" />
                           <div>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${<!-- 장바구니 아이템 수량 --> + 1})">▲</button>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${<!-- 장바구니 아이템 수량 --> - 1})">▼</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity + 1})">▲</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity - 1})">▼</button>
                           </div>
                         </div>
 
@@ -74,7 +73,7 @@
                     `;
             });
 
-            document.querySelector('.shopping-list').innerHTML = element;
+            document.querySelector('.cart-list').innerHTML = element;
         }).catch((error) => {
             console.error(error);
         });
