--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" th:href="@{/css/index.css}">
-    <title>Shopping</title>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" th:href="@{/css/index.css}">
+  <title>Shopping</title>
 </head>
 <body>
 <div class="root">
-    <nav class="nav flex justify-end">
-        <div class="flex-center gap-15">
-            <a href="/" class="nav-button">상품</a>
-            <a href="/shopping" class="nav-button">장바구니</a>
-            <a href="/order-history" class="nav-button">주문목록</a>
-            <a href="/login" class="nav-button">로그인</a>
-        </div>
-    </nav>
+  <nav class="nav flex justify-end">
+    <div class="flex-center gap-15">
+      <a href="/" class="nav-button">상품</a>
+      <a href="/cart" class="nav-button">장바구니</a>
+      <a href="/order-history" class="nav-button">주문목록</a>
+      <a href="/login" class="nav-button">로그인</a>
+    </div>
+  </nav>
 
-    <section class="cart-section">
-        <div class="cart-list">
-        </div>
-        <!--    TODO: [4단계] 장바구니 아이템 전체 주문 시 아래 주석을 해제하여 연동 -->
-        <!--    <div class="flex justify-between items-center mt-30">-->
-        <!--      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>-->
-        <!--    </div>-->
-    </section>
+  <section class="cart-section">
+    <div class="cart-list">
+    </div>
+    <!--    TODO: [4단계] 장바구니 아이템 전체 주문 시 아래 주석을 해제하여 연동 -->
+    <!--    <div class="flex justify-between items-center mt-30">-->
+    <!--      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>-->
+    <!--    </div>-->
+  </section>
 </div>
 <script th:src="@{/js/cart.js}"></script>
 <script th:src="@{/js/order.js}"></script>
@@ -60,13 +60,12 @@
                             <img src="./assets/svgs/trash.svg" alt="삭제" />
                         </button>
                         <div class="number-input-container">
-                          <input type="number" class="number-input" value="${cartItem.quantity}" />
+                          <input readonly type="number" class="number-input" value="${cartItem.quantity}" />
                           <div>
                             <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity + 1})">▲</button>
                             <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity - 1})">▼</button>
                           </div>
                         </div>
-
                       </div>
                     </div>
                     <hr class="divide-line-thin mt-10"/>
