--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -12,7 +12,7 @@
   <nav class="nav flex justify-end">
     <div class="flex-center gap-15">
       <a href="/" class="nav-button">상품</a>
-      <a href="/shopping" class="nav-button">장바구니</a>
+      <a href="/cart" class="nav-button">장바구니</a>
       <a href="/order-history" class="nav-button">주문목록</a>
       <a href="/login" class="nav-button">로그인</a>
     </div>
@@ -64,12 +64,12 @@
             let element = '<hr class="divide-line-gray mt-10" />';
             data.items.forEach(orderItem => {
                 element += `
-                    <div class="shopping-container">
+                    <div class="cart-container">
                       <div class="flex gap-15 mt-10">
                         <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
                         <div class="flex-col gap-15">
-                          <span class="shopping-name"></span> <!-- 아이템 이름 -->
-                          <span class="shopping-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                          <span class="cart-name"></span> <!-- 아이템 이름 -->
+                          <span class="cart-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
                         </div>
                       </div>
                     </div>
