--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -38,7 +38,6 @@
       return;
     }
 
-    // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
     fetch('/cartitems', {
       method: 'GET',
       headers: {
@@ -53,15 +52,15 @@
         element += `
                     <div class="shopping-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144 cover-image" src="${cartItem.imageUrl}"/> <!-- 장바구니 아이템 상품의 이미지 -->
-                        <span class="shopping-name">${cartItem.name}</span> <!-- 장바구니 아이템 상품의 이름 -->
+                        <img class="w-144 h-144 cover-image" src="${cartItem.imageUrl}"/>
+                        <span class="shopping-name">${cartItem.name}</span>
                       </div>
                       <div class="flex-col-center justify-around gap-15">
                         <button class="shopping-trash-svg" onclick="removeCartItem(${cartItem.id})">
                             <img src="./assets/svgs/trash.svg" alt="삭제" />
                         </button>
                         <div class="number-input-container">
-                          <input type="number" class="number-input" value="${cartItem.quantity}" /> <!-- 장바구니 아이템 수량 -->
+                          <input type="number" class="number-input" value="${cartItem.quantity}" />
                           <div>
                             <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity
         + 1})">▲</button>
