--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -21,7 +21,7 @@
   <section class="cart-section">
     <div class="cart-list">
     </div>
-    <!--    TODO: [4단계] 장바구니 상품 전체 주문 시 아래 주석을 해제하여 연동 -->
+    <!--    TODO: [4단계] 장바구니 아이템 전체 주문 시 아래 주석을 해제하여 연동 -->
     <!--    <div class="flex justify-between items-center mt-30">-->
     <!--      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>-->
     <!--    </div>-->
@@ -38,7 +38,7 @@
       return;
     }
 
-    // TODO: [4단계] 장바구니 상품 목록 조회 스펙에 맞게 변경
+    // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
     fetch('/cart/items', {
       method: 'GET',
       headers: {
@@ -46,25 +46,29 @@
         'Content-Type': 'application/json'
       }
     }).then((response) => {
+      console.log("응답 : ", response);
       return response.json();
     }).then((data) => {
+      console.log("데이터 : ", data);
       let element = '<hr class="divide-line-gray mt-10" />';
       data.forEach(cartItem => {
         element += `
                     <div class="cart-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144 cover-image" src="assets/${cartItem.imageFileName}"/>
+                        <img class="w-144 h-144 cover-image" src="assets/${cartItem.imageUuidFileName}"/> <!-- 장바구니 아이템 상품의 이미지 -->
                         <span class="cart-name">${cartItem.name}</span>
                       </div>
                       <div class="flex-col-center justify-around gap-15">
-                        <button class="cart-trash-svg" onclick="removeCartItem(${cartItem.cartItemId})">
+                        <button class="cart-trash-svg" onclick="removeCartItem(${cartItem.id})">
                             <img src="./assets/svgs/trash.svg" alt="삭제" />
                         </button>
                         <div class="number-input-container">
-                          <input type="number" class="number-input" value="${cartItem.quantity}" />
+                          <input type="number" class="number-input" value="${cartItem.quantity}" /> <!-- 장바구니 아이템 수량 -->
                           <div>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.cartItemId}, ${cartItem.quantity} + 1)">▲</button>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.cartItemId}, ${cartItem.quantity} - 1)">▼</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity
+        + 1})">▲</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity
+        - 1})">▼</button>
                           </div>
                         </div>
 
