--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
   <nav class="nav flex justify-end">
     <div class="flex items-center gap-15">
       <a href="/" class="nav-button">상품</a>
-      <a href="/shopping" class="nav-button">장바구니</a>
+      <a href="/cart" class="nav-button">장바구니</a>
       <a href="/order-history" class="nav-button">주문목록</a>
       <a href="/user/login" class="nav-button">로그인</a>
     </div>
@@ -21,7 +21,8 @@
   <section class="product-container">
     <!-- TODO: [1단계] 상품 정보에 맞게 변경 -->
     <div th:each="product : ${products}">
-      <img class="w-280 h-280 cover-image" th:src="|assets/${product.imageUuidFileName}|"/> <!-- 상품 이미지 -->
+      <img class="w-280 h-280 cover-image" th:src="|assets/${product.imageUuidFileName}|"/>
+      <!-- 상품 이미지 -->
       <div class="flex justify-between w-280 p-5">
         <div class="product-info">
           <span class="product-info__name" th:text="${product.name}"></span> <!-- 상품 이름 -->
