--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -38,7 +38,7 @@
       return;
     }
 
-    fetch('/cartitems', {
+    fetch('/cart/items', {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
