--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
   <section class="product-container">
     <!-- TODO: [1단계] 상품 정보에 맞게 변경 -->
     <div th:each="product : ${products}">
-      <img class="w-280 h-280 cover-image" th:src="${product.url}" alt="상품 이미지"/> <!-- 상품 이미지 -->
+      <img class="w-280 h-280 cover-image" th:src="${product.imageUrl}" alt="상품 이미지"/> <!-- 상품 이미지 -->
       <div class="flex justify-between w-280 p-5">
         <div class="product-info">
           <span th:text="${product.name}" class="product-info__name">상품 이름</span> <!-- 상품 이름 -->
