--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -59,16 +59,14 @@
                         <span class="cart-name">${cartItem.name}</span>
                       </div>
                       <div class="flex-col-center justify-around gap-15">
-                        <button class="cart-trash-svg" onclick="removeCartItem(${cartItem.id})">
+                        <button class="cart-trash-svg" onclick="removeCartItem(${cartItem.cartItemId})">
                             <img src="./assets/svgs/trash.svg" alt="삭제" />
                         </button>
                         <div class="number-input-container">
                           <input type="number" class="number-input" value="${cartItem.quantity}" /> <!-- 장바구니 아이템 수량 -->
                           <div>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity
-        + 1})">▲</button>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity
-        - 1})">▼</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.cartItemId}, ${cartItem.quantity} + 1)">▲</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.cartItemId}, ${cartItem.quantity} - 1)">▼</button>
                           </div>
                         </div>
 
