step3: step3 기능을 구현한다

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
   <nav class="nav flex justify-end">
     <div class="flex items-center gap-15">
       <a class="nav-button" href="/">상품</a>
-      <a class="nav-button" href="/shopping">장바구니</a>
+      <a class="nav-button" href="/cart">장바구니</a>
       <a class="nav-button" href="/order-history">주문목록</a>
       <a class="nav-button" href="/login">로그인</a>
     </div>
