--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <link rel="stylesheet" th:href="@{/css/index.css}">
   <title>Shopping</title>
 </head>
@@ -11,10 +11,10 @@
 <div class="root">
   <nav class="nav flex justify-end">
     <div class="flex-center gap-15">
-      <a href="/" class="nav-button">상품</a>
-      <a href="/shopping" class="nav-button">장바구니</a>
-      <a href="/order-history" class="nav-button">주문목록</a>
-      <a href="/login" class="nav-button">로그인</a>
+      <a class="nav-button" href="/">상품</a>
+      <a class="nav-button" href="/cart">장바구니</a>
+      <a class="nav-button" href="/order-history">주문목록</a>
+      <a class="nav-button" href="/login">로그인</a>
     </div>
   </nav>
 
@@ -38,8 +38,8 @@
             return;
         }
 
-        // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
-        fetch('', {
+        // TODO: [3단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
+        fetch('/carts', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
@@ -49,22 +49,22 @@
             return response.json();
         }).then((data) => {
             let element = '<hr class="divide-line-gray mt-10" />';
-            data.forEach(cartItem => {
+            data.productResponses.forEach(cartItem => {
                 element += `
                     <div class="shopping-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144 cover-image" /> <!-- 장바구니 아이템 상품의 이미지 -->
-                        <span class="shopping-name"></span> <!-- 장바구니 아이템 상품의 이름 -->
+                        <img class="w-144 h-144 cover-image" src="${cartItem.imageUrl}" /> <!-- 장바구니 아이템 상품의 이미지 -->
+                        <span class="shopping-name">${cartItem.name}</span> <!-- 장바구니 아이템 상품의 이름 -->
                       </div>
                       <div class="flex-col-center justify-around gap-15">
                         <button class="shopping-trash-svg" onclick="removeCartItem(${cartItem.id})">
                             <img src="./assets/svgs/trash.svg" alt="삭제" />
                         </button>
                         <div class="number-input-container">
-                          <input type="number" class="number-input" value="" /> <!-- 장바구니 아이템 수량 -->
+                          <input type="number" class="number-input" value="${cartItem.count}" /> <!-- 장바구니 아이템 수량 -->
                           <div>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${<!-- 장바구니 아이템 수량 --> + 1})">▲</button>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${<!-- 장바구니 아이템 수량 --> - 1})">▼</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.count + 1})">▲</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.count - 1})">▼</button>
                           </div>
                         </div>
 
@@ -74,7 +74,7 @@
                     `;
             });
 
-            document.querySelector('.shopping-list').innerHTML = element;
+            document.querySelector('.cart-list').innerHTML = element;
         }).catch((error) => {
             console.error(error);
         });
