--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <link rel="stylesheet" th:href="@{/css/index.css}">
   <title>Shopping</title>
 </head>
@@ -11,22 +11,22 @@
 <div class="root">
   <nav class="nav flex justify-end">
     <div class="flex-center gap-15">
-      <a href="/" class="nav-button">상품</a>
-      <a href="/shopping" class="nav-button">장바구니</a>
-      <a href="/order-history" class="nav-button">주문목록</a>
-      <a href="/login" class="nav-button">로그인</a>
+      <a class="nav-button" href="/">상품</a>
+      <a class="nav-button" href="/cart">장바구니</a>
+      <a class="nav-button" href="/order-history">주문목록</a>
+      <a class="nav-button" href="/login">로그인</a>
     </div>
   </nav>
 
   <section class="form-container">
-    <form id="login-form" class="mt-40">
+    <form class="mt-40" id="login-form">
       <label for="email">Email</label>
-      <input class="text-input mb-10" type="text" id="email" name="email" required>
+      <input class="text-input mb-10" id="email" name="email" required type="text">
 
       <label for="password">Password</label>
-      <input class="text-input mb-10" type="password" id="password" name="password" required>
+      <input class="text-input mb-10" id="password" name="password" required type="password">
 
-      <button type="submit" class="primary-button-small form-submit-button">Login</button>
+      <button class="primary-button-small form-submit-button" type="submit">Login</button>
     </form>
   </section>
 </div>
