--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -12,7 +12,7 @@
   <nav class="nav flex justify-end">
     <div class="flex-center gap-15">
       <a href="/" class="nav-button">상품</a>
-      <a href="/shopping" class="nav-button">장바구니</a>
+      <a href="/cart" class="nav-button">장바구니</a>
       <a href="/order-history" class="nav-button">주문목록</a>
       <a href="/login" class="nav-button">로그인</a>
     </div>
@@ -38,8 +38,8 @@
             return;
         }
 
-        // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
-        fetch('', {
+        // TODO: [3단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
+        fetch('/cart/products', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
@@ -50,21 +50,21 @@
         }).then((data) => {
             let element = '<hr class="divide-line-gray mt-10" />';
             data.forEach(cartItem => {
-                element += `
-                    <div class="shopping-container">
+              element += `
+                    <div class="cart-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144 cover-image" /> <!-- 장바구니 아이템 상품의 이미지 -->
-                        <span class="shopping-name"></span> <!-- 장바구니 아이템 상품의 이름 -->
+                        <img class="w-144 h-144 cover-image" src="${cartItem.imageUrl}"/> <!-- 장바구니 아이템 상품의 이미지 -->
+                        <span class="cart-name">${cartItem.name}</span> <!-- 장바구니 아이템 상품의 이름 -->
                       </div>
                       <div class="flex-col-center justify-around gap-15">
-                        <button class="shopping-trash-svg" onclick="removeCartItem(${cartItem.id})">
+                        <button class="cart-trash-svg" onclick="removeCartItem(${cartItem.id})">
                             <img src="./assets/svgs/trash.svg" alt="삭제" />
                         </button>
                         <div class="number-input-container">
-                          <input type="number" class="number-input" value="" /> <!-- 장바구니 아이템 수량 -->
+                          <input type="number" class="number-input" value="${cartItem.quantity}" /> <!-- 장바구니 아이템 수량 -->
                           <div>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${<!-- 장바구니 아이템 수량 --> + 1})">▲</button>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${<!-- 장바구니 아이템 수량 --> - 1})">▼</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity + 1})">▲</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity - 1})">▼</button>
                           </div>
                         </div>
 
@@ -74,7 +74,7 @@
                     `;
             });
 
-            document.querySelector('.shopping-list').innerHTML = element;
+            document.querySelector('.cart-list').innerHTML = element;
         }).catch((error) => {
             console.error(error);
         });
