chore: 용어 변경(아이템 -> 상품)

--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -47,10 +47,10 @@
           itemElement += `
                         <div class="order-list-item">
                           <div class="flex gap-15 mt-10">
-                            <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
+                            <img class="w-144 h-144" /> <!-- 상품 이미지 -->
                             <div class="flex-col gap-15">
-                              <span class="order-name"></span> <!-- 아이템 이름 -->
-                              <span class="order-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                              <span class="order-name"></span> <!-- 상품 이름 -->
+                              <span class="order-info">원 / 수량: 개</span> <!-- 상품 가격 및 수량 -->
                             </div>
                           </div>
                         </div>
