--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -21,7 +21,7 @@
   <section class="cart-section">
     <div class="cart-list">
     </div>
-    <!--    TODO: [4단계] 장바구니 아이템 전체 주문 시 아래 주석을 해제하여 연동 -->
+    <!--    TODO: [4단계] 장바구니 상품 전체 주문 시 아래 주석을 해제하여 연동 -->
     <!--    <div class="flex justify-between items-center mt-30">-->
     <!--      <button class="primary-button flex-center" onclick="requestOrder()">주문하기</button>-->
     <!--    </div>-->
@@ -38,7 +38,7 @@
       return;
     }
 
-    // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
+    // TODO: [4단계] 장바구니 상품 목록 조회 스펙에 맞게 변경
     fetch('/cart/items', {
       method: 'GET',
       headers: {
