--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -66,10 +66,10 @@
         element += `
                     <div class="shopping-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144" /> <!-- 아이템 이미지 -->
+                        <img class="w-144 h-144" /> <!-- 상품 이미지 -->
                         <div class="flex-col gap-15">
-                          <span class="shopping-name"></span> <!-- 아이템 이름 -->
-                          <span class="shopping-info">원 / 수량: 개</span> <!-- 아이템 가격 및 수량 -->
+                          <span class="shopping-name"></span> <!-- 상품 이름 -->
+                          <span class="shopping-info">원 / 수량: 개</span> <!-- 상품 가격 및 수량 -->
                         </div>
                       </div>
                     </div>
@@ -78,7 +78,7 @@
       });
 
       document.querySelector('.order-item-list').innerHTML = element;
-      document.querySelector('.order-right-section .order-total-price').innerText = ` 원`; <!-- 아이템 가격 및 수량 -->
+      document.querySelector('.order-right-section .order-total-price').innerText = ` 원`; <!-- 상품 가격 및 수량 -->
     }).catch((error) => {
       console.error(error);
     });
