--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -39,7 +39,7 @@
     }
 
     // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
-    fetch('', {
+    fetch('/api/cart', {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
@@ -53,18 +53,22 @@
         element += `
                     <div class="cart-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144 cover-image" /> <!-- 장바구니 아이템 상품의 이미지 -->
-                        <span class="cart-name"></span> <!-- 장바구니 아이템 상품의 이름 -->
+                        <img class="w-144 h-144 cover-image" src="${cartItem.productImage}" /> <!-- 장바구니 아이템 상품의 이미지 -->
+                        <span class="cart-name">${cartItem.productName}</span> <!-- 장바구니 아이템 상품의 이름 -->
                       </div>
                       <div class="flex-col-center justify-around gap-15">
-                        <button class="cart-trash-svg" onclick="removeCartItem(${cartItem.id})">
+                        <button class="cart-trash-svg" onclick="removeCartItem(${cartItem.cartProductId})">
                             <img src="./assets/svgs/trash.svg" alt="삭제" />
                         </button>
                         <div class="number-input-container">
-                          <input type="number" class="number-input" value="" /> <!-- 장바구니 아이템 수량 -->
+                          <input type="number" class="number-input" value="${cartItem.cartProductQuantity}" /> <!-- 장바구니 아이템 수량 -->
                           <div>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${<!-- 장바구니 아이템 수량 --> +1})">▲</button>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${<!-- 장바구니 아이템 수량 --> -1})">▼</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(
+                                ${cartItem.cartProductId}, ${cartItem.cartProductQuantity + 1}
+                                )">▲</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(
+                                ${cartItem.cartProductId}, ${cartItem.cartProductQuantity - 1}
+                                )">▼</button>
                           </div>
                         </div>
 
