--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -39,7 +39,7 @@
         }
 
         // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
-        fetch('', {
+        fetch('/cart', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
@@ -49,22 +49,22 @@
             return response.json();
         }).then((data) => {
             let element = '<hr class="divide-line-gray mt-10" />';
-            data.forEach(cartItem => {
+            data.cartItemResponses.forEach(cartItem => {
                 element += `
-                    <div class="shopping-container">
+                    <div class="cart-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144 cover-image" /> <!-- 장바구니 아이템 상품의 이미지 -->
-                        <span class="shopping-name"></span> <!-- 장바구니 아이템 상품의 이름 -->
+                        <img class="w-144 h-144 cover-image" src="${cartItem.imageUrl}" /> <!-- 장바구니 아이템 상품의 이미지 -->
+                        <span class="cart-name">${cartItem.name}</span> <!-- 장바구니 아이템 상품의 이름 -->
                       </div>
                       <div class="flex-col-center justify-around gap-15">
-                        <button class="shopping-trash-svg" onclick="removeCartItem(${cartItem.id})">
-                            <img src="./assets/svgs/trash.svg" alt="삭제" />
+                        <button class="cart-trash-svg" onclick="removeCartItem(${cartItem.id})">
+                            <img src="/assets/svgs/trash.svg" alt="삭제" />
                         </button>
                         <div class="number-input-container">
-                          <input type="number" class="number-input" value="" /> <!-- 장바구니 아이템 수량 -->
+                          <input type="number" class="number-input" value="${cartItem.quantity}" /> <!-- 장바구니 아이템 수량 -->
                           <div>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${<!-- 장바구니 아이템 수량 --> + 1})">▲</button>
-                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${<!-- 장바구니 아이템 수량 --> - 1})">▼</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity + 1})">▲</button>
+                            <button class="number-input-button" onclick="updateCartItemQuantity(${cartItem.id}, ${cartItem.quantity - 1})">▼</button>
                           </div>
                         </div>
 
