--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -38,8 +38,7 @@
       return;
     }
 
-    // TODO: [4단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
-    fetch('/api/cart', {
+    fetch('/api/cartProduct', {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
