refactor: 필드명 변경

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -53,7 +53,7 @@
         element += `
                     <div class="cart-container">
                       <div class="flex gap-15 mt-10">
-                        <img class="w-144 h-144 cover-image" src="assets/${cartItem.imageUuidFileName}"/>
+                        <img class="w-144 h-144 cover-image" src="assets/${cartItem.imageFileName}"/>
                         <span class="cart-name">${cartItem.name}</span>
                       </div>
                       <div class="flex-col-center justify-around gap-15">
