Step 1~3: 상품 조회, 로그인, 장바구니 기능 구현 (#14)
* feat: 커스텀 예외 생성

* feat: Money 클래스 생성, 대소비교 메서드 추가

* feat: product 생성, 가격이 0원 이상이어야 한다

* feat: image 클래스 생성, 테스트 리팩토링

* refactor: image 클래스 filePath 삭제, url테스트 추가

* feat: ProductService crud 구현

* refactor: index html 연결

* feat: productController 전체조회 구현

* feat: 샘플 데이터 sql 작성

* chore: 테스트 데이터베이스 세팅

* test: Product 통합 테스트

* docs: 1단계 요구사항 정리

* feat: TokenProvider 구현 및 테스트

* feat: Member Entity 생성

* feat: MemberRepository 구현

* feat: MemberService 로그인 구현

* feat: 로그인 컨트롤러 구현, 테스트 구현

- 로그인이 정상적으로 성공한다
- 로그인 유저 정보가 존재하지 않은 경우 예외를 던진다.
- 로그인 비밀번호가 틀린 경우 예외를 던진다.
- 비밀번호가 일치하지 않으면 false를 반환한다.

* test: 로그인 통합테스트 구현

- 일치하는 emaill과 password로 로그인을 성공한다

* feat: RestAssuredUtils추가, 오류페이지 응답코드 수정

* feat: Product Read Update Delete 기능 추가, 테스트 추가

* chore: 미션 html 변동사항 적용

* feat: CartItem 생성, findAllDtoByMemberId 기능 추가

* feat: CartItem 추가, 전체 조회 기능 추가

전체 조회

장바구니 조회시 product 정보가 변동되었을 경우가 있을 것 같습니다.
해당 사항을 체크해서 변동이 있을경우 변동된 list를 response로 내려줘서 front에서 처리할 수 있게끔 했습니다.

* test: CartItem / 상품의 변경이 확인되면 true를 반환한다.

* test: 통합 테스트 디렉토리 변경

* feat: cart 아이템 수정, 삭제 기능 추가, 테스트 추가

테스트 목록:
CartService
- 장바구니에 아이템을 추가한다
- 장바구니의 모든 아이템을 찾는다
- 장바구니의 상품 정보가 변경되었을 경우 변경된 상품 정보와 변경 여부를 반환한다.
CartItem
-본인의 장바구니가 아니면 예외를 던진다.

* feat: 인증,인가 인터셉터, custom resolver 구현

* feat: cart CRUD 컨트롤러 생성

* refactor: 인증 객체 LoggedInMember 생성, 관련 함수 리팩토링

* refactor: 미션 요구사항에 맞춰 프론트 수정

* chore: 데이터베이스 스키마 추가

* fix: 토큰 validation 오류 수정

* refactor: 미션 요구사항 js 관련 수정

* test: cartItem CRUD 통합테스트 추가

* refactor: 코드 컨벤션 리팩토링

* feat: 장바구니에 물품이 이미 있다면 수량 증가시킨다

* feat: 장바구니 물품 수량 업데이트 시 수량이 0이면 장바구니에서 삭제시킨다

* refactor: 장바구니 아이템 기본 수량 상수 도메인으로 이동

* docs: readme 도메인 요구사항 추가

* refactor: CartItem 생성자 추가

* test: 테스트용 토큰 설명 주석 추가

* refactor: TokenProvider getPayload 메서드 이름 더 명확하게 getSubject로 수정

* refactor: AuthMemberResolver supportsParameter 메서드에 파라미터 

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
   <nav class="nav flex justify-end">
     <div class="flex items-center gap-15">
       <a href="/" class="nav-button">상품</a>
-      <a href="/shopping" class="nav-button">장바구니</a>
+      <a href="view/cart"  class="nav-button">장바구니</a>
       <a href="/order-history" class="nav-button">주문목록</a>
       <a href="/login" class="nav-button">로그인</a>
     </div>
@@ -21,11 +21,11 @@
   <section class="product-container">
     <!-- TODO: [1단계] 상품 정보에 맞게 변경 -->
     <div th:each="product : ${products}">
-      <img class="w-280 h-280 cover-image" /> <!-- 상품 이미지 -->
+      <img class="w-280 h-280 cover-image" th:src="${product.imageUrl}" alt="상품 이미지"/> <!-- 상품 이미지 -->
       <div class="flex justify-between w-280 p-5">
         <div class="product-info">
-          <span class="product-info__name"></span> <!-- 상품 이름 -->
-          <span class="product-info__price"></span> <!-- 상품 가격 -->
+          <span th:text="${product.name}" class="product-info__name">상품 이름</span> <!-- 상품 이름 -->
+          <span th:text="${product.price}" class="product-info__price">상품 가격</span> <!-- 상품 가격 -->
         </div>
         <button type="submit" class="product-btn" th:onclick="addCartItem([[${product.id}]])">
           <img src="assets/svgs/cart.svg" alt="장바구니"/>
@@ -33,6 +33,7 @@
       </div>
     </div>
   </section>
+
 </div>
 </body>
 <script th:src="@{/js/cart.js}"></script>
