feat: 주문하기 페이지 연동

--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -49,7 +49,7 @@
             return;
         }
 
-        const orderId = /*[[${orderId}]]*/ '';
+        const orderId = [[${orderId}]];
 
         // TODO: [4단계] 주문 상세 조회 스펙에 맞게 변경
         fetch('', {
