refactor: api 경로 prefix 를 /api 로 수정

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -38,7 +38,7 @@
         }
 
         // TODO: [3단계] 장바구니 아이템 목록 조회 스펙에 맞게 변경
-        fetch('/cart/products', {
+        fetch('/api/cart', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
