--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -30,7 +30,7 @@
             return;
         }
 
-        fetch('/order-history/member', {
+        fetch('/api/order-history', {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
