feat: 프론트 코드에 반영

--- a/src/main/resources/static/css/common/utils.css
+++ b/src/main/resources/static/css/common/utils.css
@@ -27,6 +27,7 @@
 .justify-end {
   justify-content: end;
 }
+
 .justify-center {
   justify-content: center;
 }
@@ -65,6 +66,10 @@
 
 .gap-15 {
   gap: 15px;
+}
+
+.gap-30 {
+  gap: 30px;
 }
 
 .w-144 {
