--- a/src/main/resources/static/css/page/order.css
+++ b/src/main/resources/static/css/page/order.css
@@ -48,6 +48,11 @@
 }
 
 .order-right-section__bottom {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100%;
+  padding: 0px 16px;
 }
 
 .order-list {
