Fix : Order-detail 에러 수정

--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -62,7 +62,7 @@
                     <div class="order-list">
                       <div class="order-list__header">
                         <span>주문 번호: ${order.id}</span> <!-- 주문 번호 -->
-                        <a   href="/order-detail?orderId=${order.id}">상세보기 ></a> <!-- 주문 상세 페이지로 연결 -->
+                        <a   href="/order-detail/${order.id}">상세보기 ></a> <!-- 주문 상세 페이지로 연결 -->
                       </div>
                       ${itemElement}
                     </div>
