feat: 주문 목록 조회 html 을 API 에 맞게 변경한다

--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -51,7 +51,7 @@
 
         const orderId = [[${orderId}]];
 
-        fetch(`/order/${orderId}`, {
+        fetch(`/orders/${orderId}`, {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
