refactor: REST api 요청을 /api로 시작하도록 통일

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -37,7 +37,7 @@
       return;
     }
 
-    fetch('/cart/items', {
+    fetch('/api/cart/items', {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
