--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -30,7 +30,7 @@
       return;
     }
 
-    fetch('/order', {
+    fetch('/api/order', {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
