--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -51,7 +51,7 @@
 
     const orderId = [[${orderId}]];
 
-    fetch('/order/'+orderId, {
+    fetch('/api/order/'+orderId, {
       method: 'GET',
       headers: {
         'Authorization': `Bearer ${credentials}`,
