--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,14 +12,13 @@
   <nav class="nav flex justify-end">
     <div class="flex items-center gap-15">
       <a href="/" class="nav-button">상품</a>
-      <a href="view/cart"  class="nav-button">장바구니</a>
+      <a href="/cart"  class="nav-button">장바구니</a>
       <a href="/order-history" class="nav-button">주문목록</a>
       <a href="/login" class="nav-button">로그인</a>
     </div>
   </nav>
 
   <section class="product-container">
-    <!-- TODO: [1단계] 상품 정보에 맞게 변경 -->
     <div th:each="product : ${products}">
       <img class="w-280 h-280 cover-image" th:src="${product.imageUrl}" alt="상품 이미지"/> <!-- 상품 이미지 -->
       <div class="flex justify-between w-280 p-5">
