--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -12,7 +12,7 @@
   <nav class="nav flex justify-end">
     <div class="flex-center gap-15">
       <a href="/" class="nav-button">상품</a>
-      <a href="/view/cart"  class="nav-button">장바구니</a>
+      <a href="/cart"  class="nav-button">장바구니</a>
       <a href="/order-history" class="nav-button">주문목록</a>
       <a href="/login" class="nav-button">로그인</a>
     </div>
@@ -60,7 +60,7 @@
         const orderId = [[${orderId}]];
 
         // TODO: [4단계] 주문 상세 조회 스펙에 맞게 변경
-        fetch(`/api/order/${orderId}`, {
+        fetch(`/api/orders/${orderId}`, {
             method: 'GET',
             headers: {
                 'Authorization': `Bearer ${credentials}`,
