fix: 주문 상세내역 환율 undefined 수정

--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -51,7 +51,7 @@
                             <img class="w-144 h-144" src="../assets/${item.imageFileName}" /> <!-- 상품 이미지 -->
                             <div class="flex-col gap-15">
                               <span class="order-name">${item.name}</span> <!-- 상품 이름 -->
-                              <span class="order-info">${item.totalPrice}원 ($${data.totalPriceUSD} USD) / 수량: ${item.totalQuantity}개</span> <!-- 상품 가격 및 수량 -->
+                              <span class="order-info">${item.totalPrice}원 ($${item.totalPriceUSD} USD) / 수량: ${item.totalQuantity}개</span> <!-- 상품 가격 및 수량 -->
                             </div>
                           </div>
                         </div>
