--- a/src/main/resources/templates/order-history.html
+++ b/src/main/resources/templates/order-history.html
@@ -43,6 +43,7 @@
             let element = '';
             data.forEach(order => {
                 let itemElement = '';
+                const exchangeRate = order.exchangeRate;
                 order.orderProducts.forEach((item) => {
                     itemElement += `
                         <div class="order-list-item">
@@ -50,7 +51,7 @@
                             <img class="w-144 h-144" src="${item.imageUrl}"/> <!-- 아이템 이미지 -->
                             <div class="flex-col gap-15">
                               <span class="order-name">${item.name}</span> <!-- 아이템 이름 -->
-                              <span class="order-info">${item.price}원 / 수량: ${item.quantity}개</span> <!-- 아이템 가격 및 수량 -->
+                              <span class="order-info">${item.price}원(${(item.price / exchangeRate).toFixed(2)}$) / 수량: ${item.quantity}개</span> <!-- 아이템 가격 및 수량 -->
                             </div>
                           </div>
                         </div>
